[package]
name = "keyrunes-rust-sdk"
version = "0.0.1"
edition = "2021"
authors = ["Jonatas Luiz de Oliveira <contact@jonatasoliveira.dev>"]
description = "Rust SDK for Keyrunes authentication and authorization service"
license = "AGPL-3.0"
repository = "https://github.com/Keyrunes/keyrunes-rust-sdk"

[dependencies]
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Async traits
async-trait = "0.1"

# Framework integrations
axum = { version = "0.7", optional = true }
actix-web = { version = "4", optional = true }
rocket = { version = "0.5", optional = true, features = ["json"] }

# HTTP types
http = "1.0"

# URL handling
url = "2.5"

# JWT (para processamento de tokens)
jsonwebtoken = "9.3"
chrono = { version = "0.4", features = ["serde"] }

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "axum_example"
path = "examples/axum_example.rs"
required-features = ["axum"]

[[example]]
name = "actix_example"
path = "examples/actix_example.rs"
required-features = ["actix"]

[[example]]
name = "rocket_example"
path = "examples/rocket_example.rs"
required-features = ["rocket"]

[[example]]
name = "loco_example"
path = "examples/loco_example.rs"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.5"
dotenv = "0.15"

[features]
default = []
axum = ["dep:axum"]
actix = ["dep:actix-web"]
rocket = ["dep:rocket"]
loco = []

[lib]
name = "keyrunes_rust_sdk"
path = "src/lib.rs"
